--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
     "grunt": "~0.4.5"
   },
   "peerDependencies": {
@@ -31,5 +28,12 @@
   },
   "keywords": [
     "gruntplugin"
-  ]
+  ],
+  "dependencies": {
+    "less": "^2.5.1",
+    "less-plugin-clean-css": "^1.5.0",
+    "mime-types": "^2.1.1",
+    "request": "^2.57.0",
+    "uglify-js": "^2.4.23"
+  }
 }
