--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "less": "^2.5.1",
     "less-plugin-clean-css": "^1.5.0",
+    "lodash": "^3.9.3",
     "mime-types": "^2.1.1",
     "request": "^2.57.0",
     "uglify-js": "^2.4.23"
